ingress-egress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubesure
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/healths/premiums
        pathType: Prefix
        backend:
          service: 
            name: premiumcalc-svc
            port: 
              number: 8000
      - path: /api/v1/receipts
        pathType: Prefix
        backend:
          service:
            name: receipt-svc
            port: 
              number: 8000
      - path: /api/v1/healths/quotes
        pathType: Prefix
        backend:
          service:
            name: quote-svc
            port: 
              number: 8000
      - path: /api/v1/health/poicies
        pathType: Prefix
        backend:
          service: 
            name: policy-svc
            port: 
              number: 8000
